--- a/rpc-sample/rpc-sample-server/pom.xml
+++ b/rpc-sample/rpc-sample-server/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>rpc-server</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.rpc</groupId>
+            <artifactId>rpc-registry-zookeeper</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
