--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.slf4j>1.7.10</version.slf4j>
         <version.spring>4.1.5.RELEASE</version.spring>
-        <version.netty>4.1.6.Final</version.netty>
+        <!--etcd4j 里也引用了netty, 所以这里版本号保持一致，不然会有冲突 -->
+        <!-- 可以执行mvn dependency:tree 来查看依赖关系树 -->
+        <version.netty>4.1.20.Final</version.netty>
         <version.protostuff>1.0.9</version.protostuff>
         <version.objenesis>2.1</version.objenesis>
         <version.cglib>3.1</version.cglib>
         <version.zookeeper>3.4.6</version.zookeeper>
         <version.zkclient>0.4</version.zkclient>
-        <version.etcd4j>2.15.0</version.etcd4j>
+        <version-jetcd>0.3.0</version-jetcd>
         <version.commons-lang>3.3.2</version.commons-lang>
         <version.commons-collections>4.0</version.commons-collections>
         <version.lombok>1.18.6</version.lombok>
@@ -90,12 +92,7 @@
                 <artifactId>zkclient</artifactId>
                 <version>${version.zkclient}</version>
             </dependency>
-            <!-- etcd4j -->
-            <dependency>
-                <groupId>org.mousio</groupId>
-                <artifactId>etcd4j</artifactId>
-                <version>${version.etcd4j}</version>
-            </dependency>
+
             <!-- Apache Commons Lang -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -143,43 +140,43 @@
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <!-- Source -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>${version.maven-source-plugin}</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!-- Javadoc -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${version.maven-javadoc-plugin}</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <!--<profiles>-->
+        <!--<profile>-->
+            <!--<id>release</id>-->
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--&lt;!&ndash; Source &ndash;&gt;-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-source-plugin</artifactId>-->
+                        <!--<version>${version.maven-source-plugin}</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<phase>package</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>jar-no-fork</goal>-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
+                    <!--&lt;!&ndash; Javadoc &ndash;&gt;-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+                        <!--<version>${version.maven-javadoc-plugin}</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<phase>package</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>jar</goal>-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
+        <!--</profile>-->
+    <!--</profiles>-->
 
     <modules>
         <module>rpc-common</module>
