--- a/rpc-sample/rpc-sample-server/pom.xml
+++ b/rpc-sample/rpc-sample-server/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>rpc-registry-zookeeper</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.rpc</groupId>
+            <artifactId>rpc-registry-etcd</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
